--- a/styles/style.css
+++ b/styles/style.css
@@ -3,36 +3,79 @@ body {
   text-align: center;
 }
 
-.game-intro {
-  float: left;
-  padding: 0% 10%;
-}
+
 
 .game-intro p {
   font-size: 18px;
   font-family: "Verdana"
 }
 
-.logo-img {
-  width: 350px;
-}
+
 
 .arrows-img {
   width: 150px;
 }
 
-body button {
+
+#game-board {
+  display: none;
+  border: solid 5px green;
+  border-radius: 40px;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+}
+
+.logo-img {
+  width: 100px;
+  /* width: 100px; */
+}
+
+
+.instruction > h2 {
+  text-decoration: underline;
+}
+
+.instruction > ul {
+  list-style-type: none;
+  padding: 0;
   font-size: 30px;
-  background-color: #870007;
+}
+
+.game-intro {
+  display: flex;
+  justify-content: center;  
+}
+
+.game-intro > button{
+  margin-left: 20px;
+  font-size: 15px;
+  background-color: green;
   color: #fff;
-  padding: 20px 40px;
+  padding: 10px 30px;
   border: 0;
   box-shadow: 0;
   border-radius: 5px;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
-#game-board {
-    float: left;
-    padding: 20px 0px;
+#start-button{
+  background-color: green
+}
+
+#restart-button, #end-button {
+  background-color: skyblue;
+}
+
+#game-status
+{
+  display: inline-block;
+  font-size: 30px;
+  font-family: "Verdana";
+  color: green;
+  margin-bottom: 20px;
 }
